FRW-8899 [WIP] Adjustments for tests

--- a/buddy.yml
+++ b/buddy.yml
@@ -1872,31 +1872,8 @@
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
 
             # Initial Tests Run
-            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local -v zed_env:http://backoffice.eu.spryker.local -d results --exclude skip-due-to-issueORskip-due-to-refactoring --include group_one -s \"*\".tests.ui.suite ."'
+            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local -v zed_env:http://backoffice.eu.spryker.local -v mp_root_env:http://mp.eu.spryker.local -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login -d results --exclude skip-due-to-issueORskip-due-to-refactoring --include group_one -s \"*\".tests.ui.suite ."'
             - 'mkdir -p results && touch results/time.txt && echo $(date) > results/time.txt'
-
-            # Check for Failed Tests
-#            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot \
-#                    -v env:ui_suite \
-#                    -v docker:True \
-#                    -v dms:true \
-#                    -v glue_env:http://glue.eu.spryker.local \
-#                    -v bapi_env:http://glue-backend.eu.spryker.local \
-#                    -v sapi_env:http://glue-storefront.eu.spryker.local \
-#                    -v yves_env:http://yves.eu.spryker.local \
-#                    -v zed_env:http://backoffice.eu.spryker.local \
-#                    -v mp_root_env:http://mp.eu.spryker.local \
-#                    -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login \
-#                    -d results/rerun \
-#                    --runemptysuite \
-#                    --rerunfailed results/output.xml \
-#                    -output rerun.xml \
-#                    -s robotframework.tests.ui.suite ."
-#
-#                  .ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework rebot \
-#                    -d results --merge results/output.xml results/rerun/rerun.xml"
-#
-#                  cp rerun_results/* results/'
 
             # Upload Results to AWS S3
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
@@ -1925,7 +1902,7 @@
             - key: 'TRAVIS'
               value: '1'
               type: 'VAR'
-        timeout: 12000
+        timeout: 8000
         sync_paths:
             - pipeline_path: '/'
               vm_path: '/home/ubuntu/build'
@@ -1978,32 +1955,6 @@
             - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local -v zed_env:http://backoffice.eu.spryker.local -v mp_root_env:http://mp.eu.spryker.local -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login -d results --exclude skip-due-to-issueORskip-due-to-refactoring --include group_two -s \"*\".tests.ui.suite ."'
             - 'mkdir -p results && touch results/time.txt && echo $(date) > results/time.txt'
 
-            # Check for Failed Tests
-#            - '
-#                  .ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot \
-#                    -v env:ui_suite \
-#                    -v docker:True \
-#                    -v dms:true \
-#                    -v glue_env:http://glue.eu.spryker.local \
-#                    -v bapi_env:http://glue-backend.eu.spryker.local \
-#                    -v sapi_env:http://glue-storefront.eu.spryker.local \
-#                    -v yves_env:http://yves.eu.spryker.local \
-#                    -v zed_env:http://backoffice.eu.spryker.local \
-#                    -v mp_root_env:http://mp.eu.spryker.local \
-#                    -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login \
-#                    -d results/rerun \
-#                    --runemptysuite \
-#                    --rerunfailed results/output.xml \
-#                    -output rerun.xml \
-#                    -s robotframework.tests.ui.suite ."
-#
-#                  # Combine Results
-#                  .ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework rebot \
-#                  -d results --merge results/output.xml results/rerun/rerun.xml"
-#
-#                  # Copy final reports to results directory
-#                  cp rerun_results/* results/'
-
             # Upload Results to AWS S3
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_queue_size 6000'
@@ -2031,7 +1982,7 @@
             - key: 'TRAVIS'
               value: '1'
               type: 'VAR'
-        timeout: 12000
+        timeout: 8000
         sync_paths:
             - pipeline_path: '/'
               vm_path: '/home/ubuntu/build'
@@ -2083,31 +2034,6 @@
             - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local -v zed_env:http://backoffice.eu.spryker.local -v mp_root_env:http://mp.eu.spryker.local -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login -d results --exclude skip-due-to-issueORskip-due-to-refactoring --include group_tree -s \"*\".tests.ui.suite ."'
             - 'mkdir -p results && touch results/time.txt && echo $(date) > results/time.txt'
 
-#            # Check for Failed Tests
-#            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot \
-#                    -v env:ui_suite \
-#                    -v docker:True \
-#                    -v dms:true \
-#                    -v glue_env:http://glue.eu.spryker.local \
-#                    -v bapi_env:http://glue-backend.eu.spryker.local \
-#                    -v sapi_env:http://glue-storefront.eu.spryker.local \
-#                    -v yves_env:http://yves.eu.spryker.local \
-#                    -v zed_env:http://backoffice.eu.spryker.local \
-#                    -v mp_root_env:http://mp.eu.spryker.local/ \
-#                    -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ \
-#                    -d results/rerun \
-#                    --runemptysuite \
-#                    --rerunfailed results/output.xml \
-#                    -output rerun.xml \
-#                    -s robotframework.tests.ui.suite ."
-#
-#                  # Combine Results
-#                  .ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework rebot \
-#                  -d results --merge results/output.xml results/rerun/rerun.xml"
-#
-#                  # Copy final reports to results directory
-#                  cp rerun_results/* results/'
-
             # Upload Results to AWS S3
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_queue_size 6000'
@@ -2135,7 +2061,7 @@
             - key: 'TRAVIS'
               value: '1'
               type: 'VAR'
-        timeout: 12000
+        timeout: 8000
         sync_paths:
             - pipeline_path: '/'
               vm_path: '/home/ubuntu/build'
