--- a/buddy.yml
+++ b/buddy.yml
@@ -1879,7 +1879,7 @@
             - '.ci/snippet/RERUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local -v zed_env:http://backoffice.eu.spryker.local -v mp_root_env:http://mp.eu.spryker.local -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ -d results/rerun --runemptysuite --rerunfailed results/output.xml --output rerun.xml -s \"*\".tests.ui.suite ."'
 
             # Merge Initial and Re-run Results
-            - '.ci/snippet/RUN script -q -e -c "rebot -d results --merge results/output.xml results/rerun/rerun.xml"'
+            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework rebot -d results --merge results/output.xml results/rerun/rerun.xml"'
 
             # Upload Results to AWS S3
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
@@ -1965,7 +1965,7 @@
             - '.ci/snippet/RERUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local -v zed_env:http://backoffice.eu.spryker.local -v mp_root_env:http://mp.eu.spryker.local -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ -d results/rerun --runemptysuite --rerunfailed results/output.xml --output rerun.xml -s \"*\".tests.ui.suite ."'
 
             # Merge Initial and Re-run Results
-            - '.ci/snippet/RUN script -q -e -c "rebot -d results --merge results/output.xml results/rerun/rerun.xml"'
+            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework rebot -d results --merge results/output.xml results/rerun/rerun.xml"'
 
             # Upload Results to AWS S3
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
@@ -2050,7 +2050,7 @@
             - '.ci/snippet/RERUN script -q -e -c "docker/sdk exec robot-framework robot -v env:ui_suite -v headless:true -v ignore_console:false -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v yves_env:http://yves.eu.spryker.local -v zed_env:http://backoffice.eu.spryker.local -v mp_root_env:http://mp.eu.spryker.local -v mp_env:http://mp.eu.spryker.local/security-merchant-portal-gui/login/ -d results/rerun --runemptysuite --rerunfailed results/output.xml --output rerun.xml -s \"*\".tests.ui.suite ."'
 
             # Merge Initial and Re-run Results
-            - '.ci/snippet/RUN script -q -e -c "rebot -d results --merge results/output.xml results/rerun/rerun.xml"'
+            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework rebot -d results --merge results/output.xml results/rerun/rerun.xml"'
 
             # Upload Results to AWS S3
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
