--- a/deploy.ci.acceptance.mariadb.robot.yml
+++ b/deploy.ci.acceptance.mariadb.robot.yml
@@ -11,6 +11,10 @@ image:
         SPRYKER_PRODUCT_CONFIGURATOR_HOST: date-time-configurator-example.spryker.local
         SPRYKER_PRODUCT_CONFIGURATOR_PORT: 80
         SPRYKER_CONFIGURATOR_ENCRYPTION_KEY: 'change123'
+        SPRYKER_PRODUCT_CONFIGURATOR_HEX_INITIALIZATION_VECTOR: '0c1ffefeebdab4a3d839d0e52590c9a2'
+        SPRYKER_PUSH_NOTIFICATION_WEB_PUSH_PHP_VAPID_PUBLIC_KEY: 'BGqNWbv0hWM5CQ1-KwAfSQBMC6TMVFyrnh3vQp37oGCNvQ6eG_HyMjxBFJRWeCPTbzDoxcjhxLJS8Ck8r1G2oFw'
+        SPRYKER_PUSH_NOTIFICATION_WEB_PUSH_PHP_VAPID_PRIVATE_KEY: 'UK6DywwjKITPpRHBSY9TLPIXm6BPrHX40sseIoXT9c8'
+        SPRYKER_PUSH_NOTIFICATION_WEB_PUSH_PHP_VAPID_SUBJECT: 'https://spryker.com'
         SPRYKER_YVES_HOST_EU: yves.eu.spryker.local
         SPRYKER_YVES_HOST_US: yves.us.spryker.local
         SPRYKER_DYNAMIC_STORE_MODE: true
@@ -19,7 +23,7 @@ image:
         npm: 9
 
 composer:
-    mode: "--no-dev --quiet"
+    mode: '--no-dev --quiet'
     autoload: --classmap-authoritative
 
 regions:
@@ -40,6 +44,23 @@ regions:
                     namespace: 1
                 search:
                     namespace: eu_search
+    US:
+        services:
+            mail:
+                sender:
+                    name: Spryker No-Reply
+                    email: no-reply@spryker.local
+            database:
+                database: us-docker
+                username: spryker
+                password: secret
+            broker:
+                namespace: us-docker
+            key_value_store:
+                namespace: 2
+            search:
+                namespace: us_search
+
 groups:
     EU:
         region: EU
@@ -69,11 +90,22 @@ groups:
                 endpoints:
                     glue.eu.spryker.local:
                         region: EU
+            glue_storefront_eu:
+                application: glue-storefront
+                endpoints:
+                    glue-storefront.eu.spryker.local:
+                        region: EU
+            glue_backend_eu:
+                application: glue-backend
+                endpoints:
+                    glue-backend.eu.spryker.local:
+                        region: EU
             backoffice_eu:
                 application: backoffice
                 endpoints:
                     backoffice.eu.spryker.local:
                         region: EU
+                        primal: true
                         services:
                             session:
                                 namespace: 3
@@ -89,16 +121,64 @@ groups:
                     backend-api.eu.spryker.local:
                         region: EU
                         entry-point: BackendApi
-            glue_storefront_eu:
+
+    US:
+        region: US
+        applications:
+            mportal_us:
+                application: merchant-portal
+                endpoints:
+                    mp.us.spryker.local:
+                        region: US
+                        entry-point: MerchantPortal
+                        primal: true
+                        services:
+                            session:
+                                namespace: 4
+            yves_us:
+                application: yves
+                endpoints:
+                    yves.us.spryker.local:
+                        region: US
+                        services:
+                            session:
+                                namespace: 5
+            glue_us:
+                application: glue
+                endpoints:
+                    glue.us.spryker.local:
+                        region: US
+            glue_storefront_us:
                 application: glue-storefront
                 endpoints:
-                    glue-storefront.eu.spryker.local:
+                    glue-storefront.us.spryker.local:
                         region: EU
-            glue_backend_eu:
+            glue_backend_us:
                 application: glue-backend
                 endpoints:
-                    glue-backend.eu.spryker.local:
+                    glue-backend.us.spryker.local:
                         region: EU
+            backoffice_us:
+                application: backoffice
+                endpoints:
+                    backoffice.us.spryker.local:
+                        region: US
+                        primal: true
+                        services:
+                            session:
+                                namespace: 6
+            backend_gateway_us:
+                application: backend-gateway
+                endpoints:
+                    backend-gateway.us.spryker.local:
+                        region: US
+                        primal: true
+            backend_api_us:
+                application: zed
+                endpoints:
+                    backend-api.us.spryker.local:
+                        region: US
+                        entry-point: BackendApi
 
 services:
     database:
@@ -123,8 +203,14 @@ services:
     search:
         engine: elastic
         version: '7.10'
+    scheduler:
+        engine: jenkins
+        version: '2.442'
+        csrf-protection-enabled: true
     mail_catcher:
         engine: mailhog
+    webdriver:
+        engine: chromedriver
 
 docker:
     ssl:
