FRW-8899 Adjustments for pipeline titles

--- a/buddy.yml
+++ b/buddy.yml
@@ -2091,7 +2091,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_LARGE'
 
-- pipeline: 'Docker / Alpine / PHP 8.3 / PostgreSQL / / Robot / UI / Group One / Dynamic Store Off'
+- pipeline: 'Docker / Alpine / PHP 8.3 / PostgreSQL / Robot / UI / Group One / Dynamic Store Off'
   events:
       - type: "PULL_REQUEST"
         events:
@@ -2169,7 +2169,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_LARGE'
 
-- pipeline: 'Docker / Alpine / PHP 8.3 / PostgreSQL / / Robot / UI / Group Two / Dynamic Store Off'
+- pipeline: 'Docker / Alpine / PHP 8.3 / PostgreSQL / Robot / UI / Group Two / Dynamic Store Off'
   events:
       - type: "PULL_REQUEST"
         events:
@@ -2247,7 +2247,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_LARGE'
 
-- pipeline: 'Docker / Alpine / PHP 8.3 / PostgreSQL / / Robot / UI / Group Three / Dynamic Store Off'
+- pipeline: 'Docker / Alpine / PHP 8.3 / PostgreSQL / Robot / UI / Group Three / Dynamic Store Off'
   events:
       - type: "PULL_REQUEST"
         events:
